feat: additional api for swagger
