# app/controllers/api/v1/content_items_controller.rb
@@ -1,0 +1,9 @@
+class Api::V1::ContentItemsController < ApplicationController
+  def index
+    @day = Day.find(params[:day_id])
+    @content_items = @day.content_items.includes(:article).order(:position)
+    render json: @content_items, include: [:article]
+  rescue ActiveRecord::RecordNotFound
+    render json: { error: 'День не найден' }, status: :not_found
+  end
+end
